objects/FinServ__B2CLeadToOpportunityMapping__mdt.object
<CustomObject>
    <description>Defines mapping between Lead record type to Opportunity record type. It is primarily meant for B2C Lead record types.</description>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if mapping entry is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__LeadRecordTypeNamespace__c</fullName>
        <description>Indicates namespace of the Lead record type</description>
        <label>Lead Record Type Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LeadRecordType__c</fullName>
        <description>Indicates record type of the Lead.</description>
        <label>Lead Record Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OpportunityRecordTypeNamespace__c</fullName>
        <description>Indicates namespace of the Opportunity record type</description>
        <label>Opportunity Record Type Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OpportunityRecordType__c</fullName>
        <description>Indicates record type of the Opportunity record.</description>
        <label>Opportunity Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>B2C Lead To Opportunity Mapping</label>
    <pluralLabel>B2C Lead To Opportunities Mappings</pluralLabel>
</CustomObject>